updated styles squashed bugs

--- a/style.css
+++ b/style.css
@@ -1,13 +1,71 @@
-body {
-  background-color: rgba(66, 66, 66, 0.9);
+html {
+  min-width: 350px;
 }
+
+body {
+  border: 2px rgba(255, 255, 255, 0.411) solid;
+  margin: 0px;
+  background: linear-gradient(130deg, rgb(19, 19, 19), rgb(26, 26, 26));
+  color: white;
+  padding: 1rem;
+}
+
+input {
+  background-color: transparent;
+  color: white;
+  border: 1px solid gray;
+}
+
+button {
+  background-color: transparent;
+  color: white;
+  border: 1px rgba(255, 255, 255, 0.164) solid;
+  /* border-radius: 10%; */
+  padding: .1rem;
+}
+
+button:hover {
+  background: linear-gradient(90deg, rgb(214, 85, 85), rgb(216, 58, 58));
+  /* background-color: brown; */
+  /* color: rgba(0, 0, 0, 0.692); */
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.466);
+  transition-duration: .1s;
+}
+
+textarea {
+  color: white;
+  background-color: transparent;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  min-height: 50px;
+}
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
+}
+
 #gptTitle {
   color: white;
 }
+
 #gptResponse {
-  background-color: rgba(255, 255, 255, 0.4);
+  /* background-color: rgba(255, 255, 255, 0.4); */
   border-radius: 5px;
 }
+
 #responseTitle {
   color: white;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.topBorder {
+  border-top: 2px rgba(255, 255, 255, 0.329) solid;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
